--- a/MajorHelp/templates/base.html
+++ b/MajorHelp/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}My Site{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
