--- a/MajorHelp/templates/MajorHelp/HomePage.html
+++ b/MajorHelp/templates/MajorHelp/HomePage.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="image-section">
-        <img src="{% static 'images/home2.png' %}" alt="Testing Image" style="width:100%;">
+        <img src="{% static 'images/home/home2.png' %}" alt="Testing Image" style="width:100%;">
         <div class="overlay"></div>
     </div>
 </div>
