fixed images on deployment

--- a/MajorHelp/templates/About/about.html
+++ b/MajorHelp/templates/About/about.html
@@ -52,7 +52,7 @@
     <div class="row">
         <div class="col-md-8 card mb-4 mt-3 left top">
             <div class="content-box">
-                <img src="{% static 'images/about_image1.png' %}" alt="Student using laptop" class="right-image">
+                <img src="{% static 'images/about/about_image1.png' %}" alt="Student using laptop" class="right-image">
 
                 <!-- About Us Section -->
                 <h1>About <span style="color: #4fc7cf;">Us</span></h1>
