--- a/MajorHelp/templates/Contact/contact.html
+++ b/MajorHelp/templates/Contact/contact.html
@@ -65,7 +65,7 @@
     <div class="row">
         <div class="col-md-8 card mb-4 mt-3 left top">
             <div class="content-box"> <!-- Applying the content-box styling -->
-                <img src="{% static 'images/contact_1.png' %}" alt="image for contact page" class="right-image">
+                <img src="{% static 'images/contact/contact_1.png' %}" alt="image for contact page" class="right-image">
                 <h1>Wanna Reach <span style="color: #4fc7cf;">Us</span></h1>
 
                 <div class="content-section">
