--- a/MajorHelp/templates/MajorHelp/UniOverviewPage.html
+++ b/MajorHelp/templates/MajorHelp/UniOverviewPage.html
@@ -4,7 +4,7 @@
 
 <head>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/UniOverview.css' %}">
+    <link rel="stylesheet" href="{% static 'css/overview/UniOverview.css' %}">
     <meta charset="UTF-8">
     <title>{{ university.name }}</title>
 </head>
