--- a/MajorHelp/templates/calc/calc.html
+++ b/MajorHelp/templates/calc/calc.html
@@ -5,7 +5,7 @@
 
 {% block title %}Tuition Calc{% endblock %}
 
-{% block stylesheet %}{% static 'css/calc.css' %}{% endblock stylesheet %}
+{% block stylesheet %}{% static 'css/calc/calc.css' %}{% endblock stylesheet %}
 
 {% block script %}
 <script>
