edited file paths, got repo ready for deployment

--- a/MajorHelp/templates/About/about.html
+++ b/MajorHelp/templates/About/about.html
@@ -83,7 +83,7 @@
                         <li><strong>Authentic Reviews</strong>: All of our reviews come from real students who have firsthand experience with the universities listed.</li>
                         <li><strong>Comprehensive Insights</strong>: We cover everything from academics and campus facilities to student well-being and career support, so you can get a full picture.</li>
                         <li><strong>Community Driven</strong>: Built by students, for students.</li>
-                        <img src="{% static 'images/logo.png' %}" alt="logo for project" class="middle-image">
+                        <img src="{% static 'images/logo/logo.png' %}" alt="logo for project" class="middle-image">
 
                     </ul>
                 </div>
